# Lidar4FRC

./: .gitignore  Dockerfile  README.md  setup.sh
catkin_ws/: lidarrun.sh  setup.sh  setupsim.sh
catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
catkin_ws/devel/lib/pkgconfig/: map.pc  rvizfiles.pc  sim.pc  start.pc  test.pc  ydlidar.pc
catkin_ws/devel/lib/test/: talker
catkin_ws/devel/lib/ydlidar/: ydlidar_client  ydlidar_node
catkin_ws/devel/lib/ydlidar_ros/: ydlidar_node
catkin_ws/devel/share/start/cmake/: startConfig.cmake
catkin_ws/src/lidartoroborio/: lidartoroborio.py
catkin_ws/src/map/: CMakeLists.txt  map.yaml
catkin_ws/src/rvizfiles/: CMakeLists.txt
catkin_ws/src/sim/: lidar.cpp  odom.cpp
catkin_ws/src/start/: .CMakeLists.txt.swp  run.launch  runsim.launch
catkin_ws/src/ydlidar_ros/urdf/: .ydlidar.urdf.swp
shell/catkin_ws/: frames.gv  scan_tools.rosinstall  setup.sh
shell/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
shell/catkin_ws/src/: .rosinstall  .rosinstall.bak
shell/catkin_ws/src/grid/: CMakeLists.txt  grid.py  package.xml
shell/catkin_ws/src/lidartoroborio/: CMakeLists.txt  alternate_logger.py  lidartoroborio.py  package.xml
shell/catkin_ws/src/map/: package.xml
shell/catkin_ws/src/odom/: CMakeLists.txt  odom.py  package.xml
shell/catkin_ws/src/rvizfiles/: odom.rviz
shell/catkin_ws/src/sim/: CMakeLists.txt  odom.cpp
shell/catkin_ws/src/start/: CMakeLists.txt  amcl.launch  package.xml  run.launch  testrun.launch
shell/catkin_ws/src/test/: CMakeLists.txt  listener.cpp  package.xml  talker.cpp
(+33 files in other folders)
